Fixed overflow issues with copyright text
Fixed overflow issues with copyright text

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@
 body {
 	font-size: 16px;
 	font-family: "Barlow", sans-serif;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 	color: #162542;
 }
 
@@ -45,18 +45,21 @@ p {
 /* Fonts */
 
 .header-1 {
+	text-transform: uppercase;
 	font-weight: 900;
 	font-size: 3.5rem;
 	line-height: 56px;
 }
 
 .header-2 {
+	text-transform: uppercase;
 	font-weight: 900;
 	font-size: 32px;
 	line-height: 36px;
 }
 
 .header-3 {
+	text-transform: uppercase;
 	font-weight: 900;
 	font-size: 24px;
 	line-height: 28px;
@@ -122,6 +125,7 @@ p {
 	margin: 0 auto;
 	margin-top: 100px;
 	margin-bottom: 50px;
+	width: 100%;
 }
 
 /* Tablet */
